--- a/Fiver SMP MOD (SERVER)/src/main/resources/META-INF/mods.toml
+++ b/Fiver SMP MOD (SERVER)/src/main/resources/META-INF/mods.toml
@@ -1,3 +1,5 @@
+# This configuration is owned by BENZOOgataga and must not be reused without permission.
+
 # This is an example mods.toml file. It contains the data relating to the loading mods.
 # There are several mandatory fields (#mandatory), and many more that are optional (#optional).
 # The overall format is standard TOML format, v0.5.0.
