--- a/Fiver SMP MOD (SERVER)/gradle.properties
+++ b/Fiver SMP MOD (SERVER)/gradle.properties
@@ -1,3 +1,5 @@
+# This configuration is owned by BENZOOgataga and must not be reused without permission.
+
 # Sets default memory used for gradle commands. Can be overridden by user or command line properties.
 # This is required to provide enough memory for the Minecraft decompilation process.
 org.gradle.jvmargs=-Xmx3G
